<resources>
    <string name="app_name">FixMyPicture</string>
    <string name="beginer">Beginner</string>
    <string name="advanced">Advanced</string>
    <string name="pro">Professional</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="level">Level</string>
    <string name="continue_btn">continue</string>
    <string name="quite_game">Quite Game?</string>
    <string name="quite_game_msg">Do you really want to quite game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quite_level">Quite Level?</string>
    <string name="quite_level_msg">Do you really want to finish level? progress will not be saved</string>
    <string name="main_menu">main menu</string>
    <string name="new_game">new game</string>
    <string name="continue_game">continue</string>
    <string name="free_mode_game">free mode</string>
    <string name="no_saved_game">No saved game! Please start a new game</string>
    <string name="not_all_pazzels_solved">You must complete all the puzzles in this window before you can progress to the next</string>
    <string name="your_the_best">You are the best! no levels left in the game!</string>
    <string name="first_level">This is first level, no going back yet</string>
    <string name="must_pass_in_story">You must pass the level in story mode first</string>
    <string name="best_score">best score:</string>
    <string name="elephants_fact_c">The leader of the herd is usually the oldest female – she is called the Matriarch</string>
    <string name="elephants_fact_d">Elephants are so clever they can peel their own bananas, corn and lots of other food.</string>
    <string name="elephants_fact_e">An elephant lives on average to the age of 70 – the same as humans</string>
    <string name="owls_fact_a">Owls have powerful talons (claws) which help them catch and kill prey.</string>
    <string name="owls_fact_c">The color of owl’s feathers helps them blend into their environment (camouflage).</string>
    <string name="owls_fact_d">Some owl species hunt fish.</string>
    <string name="owls_fact_e">There are around 200 different owl species.</string>
    <string name="kualas_fact_a">Koalas have similar fingerprints to humans.</string>
    <string name="kualas_fact_b">Koala fossils found in Australia have been dated as long ago as 20 million years.</string>
    <string name="kualas_fact_c">A baby koala is called a ‘joey’</string>
    <string name="kualas_fact_d">Baby Koalas live in their mother’s pouch for around six months and remain with them for another six months or so afterwards.</string>
    <string name="kualas_fact_e">Koalas eat eucalypt leaves and almost nothing else.</string>
    <string name="choose_option">Choose an option</string>
    <string name="random_fact">Random Fact</string>
    <string name="text_copied">Text Copied</string>
    <string name="interesting_fact">Some interesting fact</string>
    <string name="share_with_friend">Share with a friend</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="share_this_fact">Share this fact</string>
    <string name="enlarge_picture">Enlarge Picture</string>
    <string name="solve_puzzle">Solve Puzzle</string>
    <string name="show_random_fact_about_me">Show Random Fact about this animal</string>
    <string name="elephants_fact_a">Wild elephants live in families called herds – herds are made up of female elephants.</string>
    <string name="elephants_fact_b">In the wild, a mother elephant has help with the babies from other elephants – who are known as Aunties. A new mother will choose her aunties and together they will raise the baby.</string>
    <string name="owls_fact_b">Owls can turn their heads as much as 270 degrees.</string>
    <string name="welcome">Welcome!</string>
    <string name="intro_msg">Welcome to Fix My Picture.A horrible thing has happened!the pictures of our favourite animals has shifted!We need your help in putting the pictures back in the original order.Would you like to see the tutorial?</string>
    <string name="how_to_play">How to Play</string>
    <string name="OK">OK</string>
    <string name="tutorial_msg">In this game you are asked to reorganize the picture pieces by moving them around.however, it is only possible to move adjacent tile to an empty tile.this will cause the empty tile and the other tile switch placesOur goal is to organize the picture pieces to form a whole picture exactly like the originalwith only the empty tile being in the bottom right corner.Goodluck!</string>
</resources>
